k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gamesocial
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      # Uncomment imagePullSecrets if your repo is PRIVATE
      # imagePullSecrets:
      #   - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/vishal-shaw20/gamesocial-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "20Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: gamesocial
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
